--- a/src/views/partials/answer-or-question-modal.hbs
+++ b/src/views/partials/answer-or-question-modal.hbs
@@ -16,7 +16,7 @@
           </div>
           <h5 class="h5-modal-aq"> Do you need expert answers to your question?</h5>
           <a href="/users/answerorquestion/question" pa-marked="1">
-            <button class="button-main-4 button-modal-aq" pa-marked="1">
+            <button class="cta-btn-main button-modal-aq" pa-marked="1">
               Get answers!
             </button>
           </a>
@@ -27,16 +27,12 @@
           </div>
           <h5 class="h5-modal-aq"> Are you an expert and want to answer questions?</h5>
           <a href="/users/answerorquestion/answer" pa-marked="1">
-            <button class="button-main-3 button-modal-aq" pa-marked="1">
-              Earn money answering!
+            <button class="cta-btn-main-2 button-modal-aq" pa-marked="1">
+              Earn Bitcoins answering!
             </button>
           </a>
         </div>
-
-
-
       </div>
-
     </div>
   </div>
 </div>
