--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -8,6 +8,8 @@
     </div>
     <nav id="nav-menu-container">
       <ul class="nav-menu">
+        <li class="logo-price-menu"><h1><a href="#intro" class="scrollto logov6"><img src="/img/logoprice.png"
+                        alt='get quick answers from experts' /> </a></h1></li>
         <li class="menu-active"><a href="/">Home</a></li>
         {{#if user}}
         <li class="dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
@@ -28,7 +30,7 @@
         <li><a href="/users/signup">Sign Up</a></li>
         {{/if}}
 
-        <li><a href="/#featured-services">What is PriceAnswers?</a></li>
+        <li><a href="/#about">What is PriceAnswers?</a></li>
 
       </ul>
     </nav><!-- #nav-menu-container -->
