--- a/src/public/css/timeline.css
+++ b/src/public/css/timeline.css
@@ -11,7 +11,7 @@ section .timeline {
 
 .timeline {
   position: relative;
-  margin-top: 2rem;
+  margin-top: 0rem;
 }
 .timeline::before {
   content: '';
@@ -55,7 +55,9 @@ section .timeline {
   width: 45%;
   padding: 10px 30px;
   border-radius: 4px;
-  background: #f5f5f5;
+  background: linear-gradient(rgba(0, 142, 99, 0.1), rgba(0, 0, 0, 0.1)), url(../img/call-to-action-bg.jpg) fixed center center;
+  background-size: cover;
+  color: white;
   box-shadow: 0 20px 25px -15px rgba(0, 0, 0, .3);
 }
 .timeline-content::after {
@@ -136,7 +138,7 @@ blockquote {
   right: 0;
 }
 .timeline-content h2{
-  color: #000;
+  color: rgb(255, 255, 255);
   font-weight: 700;
   font-size: 20px;
   padding: 0;
