--- a/src/views/emailtemplates/invoicepaidanswer/html.hbs
+++ b/src/views/emailtemplates/invoicepaidanswer/html.hbs
@@ -56,7 +56,7 @@
           <small>to</small>
           <address class="m-t-5 m-b-5">
             <strong class="text-inverse" style="    font-size: 16px;
-    font-weight: 600;">{{name}} paypal account: {{paypal_email}}</strong><br>
+    font-weight: 600;">Wallet Address: {{wallet_address}}</strong><br>
           </address>
         </div>
         <div class="invoice-date" style="    display: table-cell;
@@ -153,7 +153,7 @@
     position: absolute;
     top: 10px;
     left: 10px;
-    font-size: 12px">TOTAL</small> <span class="f-w-600">{{reward_offered}} USD</span>
+    font-size: 12px">TOTAL</small> <span class="f-w-600">{{reward_btc}} BTC</span>
           </div>
         </div>
         <!-- end invoice-price -->
