--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,4 +1,5 @@
 <!-- CARROUSEL  INTRO -->
+
 <section id="intro">
   <div class="intro-container">
     <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
@@ -15,7 +16,7 @@
           </div>
           <div class="carousel-container">
             <video autoplay autoplay="autoplay" muted loop playsInline
-              style="position: absolute; min-width: 100%; opacity: 0.7" id="video1" src=""  data-src="img/video3.mp4"
+              style="position: absolute; min-width: 100%; opacity: 0.7" id="video1" src="" data-src="img/video3.mp4"
               type="video/mp4">
             </video>
 
@@ -31,9 +32,9 @@
                     history or any other and pay what you want</p>
                   <div class="mt-3">
                     <a {{#if user}} href="/questions/add" {{else}} href="/users/signup" {{/if}}><button
-                        class="button-main-3">Get Answers</button></a>
-                    <a {{#if user}} href="/questions/allquestions" {{else}} href="/users/signup" {{/if}}><button
-                        class="button-main-4">Earn Money Answering</button></a>
+                        class="cta-btn-main">Get Answers</button></a>
+                    <a {{#if user}} href="/questions/allquestions" {{else}} href="#services" {{/if}}><button
+                        class="cta-btn-main-2">Earn Bitcoins Answering</button></a>
                   </div>
                 </div>
               </div>
@@ -61,11 +62,11 @@
                   <h1 class="h1-title-index">
                     Ask right now and pay just when you have answers!</h1>
                   <p class="subtitle-index">Put a reward on your question and just wait for the quick answers.</p>
-                  <div class="mt-3">
+                    <div class="mt-3">
                     <a {{#if user}} href="/questions/add" {{else}} href="/users/signup" {{/if}}><button
-                        class="button-main-3">Get Answers</button></a>
-                    <a {{#if user}} href="/questions/allquestions" {{else}} href="/users/signup" {{/if}}><button
-                        class="button-main-4">Earn Money Answering</button></a>
+                        class="cta-btn-main">Get Answers</button></a>
+                    <a {{#if user}} href="/questions/allquestions" {{else}} href="#services" {{/if}}><button
+                        class="cta-btn-main-2">Earn Bitcoins Answering</button></a>
                   </div>
                 </div>
               </div>
@@ -80,8 +81,9 @@
             <img id="image3" data-src="img/back2.jpg" alt="solve math questions" src="" />
           </div>
           <div class="carousel-container">
-            <video autoplay autoplay="autoplay" muted loop playsInline 
-              style="position: absolute; min-width: 100%; opacity: 0.7" id="video3" src="" data-src="img/video5.mp4" type="video/mp4">
+            <video autoplay autoplay="autoplay" muted loop playsInline
+              style="position: absolute; min-width: 100%; opacity: 0.7" id="video3" src="" data-src="img/video5.mp4"
+              type="video/mp4">
             </video>
             <div class="carousel-content">
               <div class="row container-title-index">
@@ -89,13 +91,13 @@
                   <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='solve math problems' />
                     </a></h1>
                   <h1 class="h1-title-index">
-                    You are an expert? Earn money answering!</h1>
-                  <p class="subtitle-index">Search by tags what questions you can answer and earn money.</p>
+                    You are an expert? Earn Bitcoins answering!</h1>
+                  <p class="subtitle-index">Search by tags what questions you can answer and we pay you in bitcoins!.</p>
                   <div class="mt-3">
                     <a {{#if user}} href="/questions/add" {{else}} href="/users/signup" {{/if}}><button
-                        class="button-main-3">Get Answers</button></a>
-                    <a {{#if user}} href="/questions/allquestions" {{else}} href="/users/signup" {{/if}}><button
-                        class="button-main-4">Earn Money Answering</button></a>
+                        class="cta-btn-main">Get Answers</button></a>
+                    <a {{#if user}} href="/questions/allquestions" {{else}} href="#services" {{/if}}><button
+                        class="cta-btn-main-2">Earn Bitcoins Answering</button></a>
                   </div>
                 </div>
               </div>
@@ -120,54 +122,27 @@
   </div>
 </section><!-- END CARROUSEL  INTRO -->
 
-<!-- SERVICIOS DESTACADOS -->
-<section id="featured-services">
-  <div class="container">
-    <div class="row">
-
-      <div class="col-lg-4 box">
-        <i class="ion-ios-heart-outline"></i>
-        <h4 class="title"><a href="">Get a quick answer</a></h4>
-        <p class="description">If you need a quick answer, you have come to the right place, add a reward to your
-          question and the answers will rain on you.
-        </p>
-      </div>
-      <div class="col-lg-4 box box-bg">
-        <i class="ion-ios-stopwatch-outline"></i>
-        <h4 class="title"><a href="">Earn money answering</a></h4>
-        <p class="description">Find out what questions you can answer and win the reward if you were chosen as the best
-          answer. Be careful which questions to answer because they will rate you.</p>
-      </div>
-
-      <div class="col-lg-4 box">
-        <i class="ion-ios-bookmarks-outline"></i>
-        <h4 class="title"><a href="">Pay only when you have answers</a></h4>
-        <p class="description">After making the question and adding a theoretical reward, we will show you which experts
-          have answer you and only if you are satisfied should you pay the reward to see the answers.</p>
-      </div>
-
-    </div>
-  </div>
-</section><!-- #SERVICIOS DESTACADOS -->
-
 <!-- PUT A PRICE ON YOUR QUESTION -->
 <section id="about">
   <div class="container">
 
     <header class="section-header">
       <h3>Put a price on your question</h3>
-      <p>Pay only when you see which experts have answered you.</p>
+      <p style="padding-bottom: 10px;">Pay only when you see which experts have answered you.</p>
+            <div class="button-expert">
+        <a {{#if user}} href="/questions/add" {{else}} href="/users/signin" {{/if}}><button
+            class="cta-btn-main">Get answers fast!</button></a>
+      </div>
     </header>
 
     <div class="row about-cols">
-
       <div class="col-md-4 wow fadeInUp">
         <div class="about-col">
           <div class="img">
             <img src="img/back1.jpg" alt="" class="img-fluid">
             <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
           </div>
-          <h2 class="title"><a href="#">Ask your question and pay later</a></h2>
+          <h2 class="title"><a href="users/signin">Ask your question and pay later</a></h2>
           <p>
             When asking a question you must add a theoretical reward, but you do not have to pay it at that time, only
             pay when you see which experts have answered you, after paying the reward you will see their answers.
@@ -179,11 +154,11 @@
             <img src="img/back2.jpg" alt="" class="img-fluid">
             <div class="icon"><i class="ion-ios-eye-outline"></i></div>
           </div>
-          <h2 class="title"><a href="#">You continue to receive responses after you have paid the reward
+          <h2 class="title"><a href="users/signin">You choose how much to pay
             </a></h2>
           <p>
-            Once you have paid the reward you will receive more responses since the experts, because they will know that
-            the reward is paid.
+            You choose the amount of reward that the expert you choose as the best answer will take, the experts will be
+            able to see your reward and answer you in the best way to be chosen!.
           </p>
         </div>
       </div>
@@ -193,7 +168,7 @@
             <img src="img/back3.jpg" alt="" class="img-fluid">
             <div class="icon"><i class="ion-ios-list-outline"></i></div>
           </div>
-          <h2 class="title"><a href="#">See the answers and choose the best one</a></h2>
+          <h2 class="title"><a href="users/signin">See the answers and choose the best one</a></h2>
           <p>
             After seeing the answers you can choose the best answer, which will receive the reward you have paid.
             You can only choose one so think it over.
@@ -206,20 +181,31 @@
   </div>
 </section><!-- #ABOUT US -->
 
+
+
+
 <!-- CALL TO ACTION -->
 <section id="call-to-action" class="wow fadeIn">
   <div class="container text-center">
     <h3>Get the answers you need in simple steps!</h3>
-    <p> If you need an expert in mathematics, computing, physics, law, whatever it is in a few simple steps, add the
+    <p> If you need an expert in mathematics, computing, physics, law, or any other type it is in a few simple steps,
+      add the
       reward that you are willing to pay and wait for the answers to come to you. </p>
-    <a class="cta-btn" {{#if user}} href="/questions/add" {{else}} href="/users/signin" {{/if}}>Get Answers</a> <a
-      class="cta-btn" {{#if user}} href="/questions/allanswers" {{else}} href="/users/signin" {{/if}}>Earn Money
-      Answering</a>
+    <a class="cta-btn" {{#if user}} href="/questions/add" {{else}} href="/users/signup" {{/if}}>Get Answers</a>
   </div>
 </section>
 <!-- #CALL TO ACTION -->
 
 <!-- TIMELINE -->
+
+<div class="container" style="margin-top: 1rem;">
+
+  <header class="section-header">
+    <h3>How it works</h3>
+    <p>Get answers quickly and in a few steps.</p>
+  </header>
+</div>
+
 <section class="timeline">
   <div class="container">
     <div class="timeline-item">
@@ -229,7 +215,7 @@
         <h2>Ask your question</h2>
         <div class="date">STEP 1</div>
         <p>Add the question describing it as best as possible, add tags to it so that the experts can find it and add a
-          reward.
+          theoretical reward which you will not have to pay yet.
         </p>
       </div>
     </div>
@@ -247,7 +233,7 @@
       <div class="timeline-img"></div>
       <div class="timeline-content wow fadeInLeft">
         <h2>Choose the best answer</h2>
-        <div class="date">STEP 1</div>
+        <div class="date">STEP 3</div>
         <p>Being able to visualize the answers you are already enabled to choose the best answer and therefore the
           reward will be taken.
           In the event that the time period is met and you have not chosen the best answer, the reward will go to the
@@ -260,6 +246,35 @@
 </section>
 <!-- #TIMELINE -->
 
+<!-- SERVICIOS DESTACADOS -->
+<section id="featured-services">
+  <div class="container" style="padding: 0">
+    <div class="row">
+
+      <div class="col-lg-4 box">
+        <i class="ion-ios-heart-outline"></i>
+        <h4 class="title"><a href="">Get a quick answers</a></h4>
+        <p class="description">If you need quick answers, you have come to the right place, add a reward to your
+          question and the answers will rain on you.
+        </p>
+      </div>
+      <div class="col-lg-4 box ">
+        <i class="ion-ios-stopwatch-outline"></i>
+        <h4 class="title"><a href="">You continue to receive responses after you have paid the reward</a></h4>
+        <p class="description">Once you have paid the reward you will receive more responses since the experts, because
+          they will know that the reward is paid.</p>
+      </div>
+
+      <div class="col-lg-4 box">
+        <i class="ion-ios-bookmarks-outline"></i>
+        <h4 class="title"><a href="">Pay only when you have answers</a></h4>
+        <p class="description">After making the question and adding a theoretical reward, we will show you which experts
+          have answer you and only if you are satisfied should you pay the reward to see the answers.</p>
+      </div>
+
+    </div>
+  </div>
+</section><!-- #SERVICIOS DESTACADOS -->
 
 
 <!-- EARN MONEY ANSWERING -->
@@ -267,50 +282,68 @@
   <div class="container">
 
     <header class="section-header wow fadeInUp">
-      <h3>EARN MONEY ANSWERING</h3>
-      <p>Through PriceAnswer you can earn money thanks to your knowledge, you just have to answer the questions and if
+      <h3>ARE YOU AN EXPERT? EARN BITCOINS ANSWERING!</h3>
+      <p style="padding-bottom: 10px;">Through PriceAnswer you can earn Bitcoins thanks to your knowledge, you just have to answer the questions and
+        if
         you are chosen the best answer you will get the reward.</p>
+      <div class="button-expert">
+        <a {{#if user}} href="/questions/allquestions" {{else}} href="/users/signin" {{/if}}><button
+            class="cta-btn-main-2">Earn Bitcoins Answering</button></a>
+      </div>
+
     </header>
 
     <div class="row">
 
       <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
         <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-        <h4 class="title"><a href="">Find Questions</a></h4>
+        <h4 class="title"><a href="users/signin">Find Questions</a></h4>
         <p class="description">You can search for questions through tags and visualize how much would be the reward you
           would get. </p>
       </div>
+
+      <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
+        <div class="icon"><i class="ion-ios-people-outline"></i></div>
+        <h4 class="title"><a href="users/signin">We transform the reward into Bitcoins</a></h4>
+        <p class="description">
+          The user who asked the question pays in USD but you will earn the equivalent of that reward in Bitcoins! You
+          just need to create your wallet If you don't have one yet, you can create one on any page, it's free!. </p>
+      </div>
       <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
         <div class="icon"><i class="ion-ios-bookmarks-outline"></i></div>
-        <h4 class="title"><a href="">Answer and you will be qualified</a></h4>
-        <p class="description">You must answer the question only in the case that you are sure since you will be
-          qualified, this qualification serves so that users can trust your expertise and pay the reward to see your
-          answers.</p>
+        <h4 class="title"><a href="users/signin">Don't have a bitcoin wallet?</a></h4>
+        <p class="description">Creating a bitcoin wallet is free and fast, you just have to go to a bitcoin page like <a href="https://www.coinbase.com">Coinbase</a>, <a href="https://www.blockchain.com">Blockchain</a> or any of your preference. After you create your wallet you can give us your wallet address when you are chosen the best answer and we will transfer the reward to you! that easy!</p>
       </div>
       <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
         <div class="icon"><i class="ion-ios-paper-outline"></i></div>
-        <h4 class="title"><a href="">Pay to view</a></h4>
+        <h4 class="title"><a href="users/signin">Pay to view</a></h4>
         <p class="description">Users will only be able to see your answers if they have paid the reward, so if your
           qualifications give them confidence, the most likely thing is that they will pay it.</p>
       </div>
       <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
         <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
-        <h4 class="title"><a href="">Be chosen the best answer</a></h4>
+        <h4 class="title"><a href="users/signin">Be chosen the best answer</a></h4>
         <p class="description">
           When you have been chosen the best answer you will receive your reward and the answers of all users will be
           enabled so they can be rated among experts.</p>
       </div>
 
-      <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
-        <div class="icon"><i class="ion-ios-people-outline"></i></div>
-        <h4 class="title"><a href="">The reward always for the best answer</a></h4>
-        <p class="description">
-          In the case that the answers have been enabled and the owner of the question has not chosen the best answer,
-          the reward will go to the one with the best rating. </p>
-      </div>
 
     </div>
 
   </div>
 </section>
 <!-- #SERVICES -->
+
+
+<!-- CALL TO ACTION -->
+<section id="expert-call-to" class="wow fadeIn expert-call-to">
+  <div class="container text-center">
+    <h3>We pay you with the best currency, Bitcoins!</h3>
+    <p> Users who ask questions pay with USD but we transform that currency into Bitcoins to pay you quickly and in any country, what are you waiting for? earn bitcoins by answering questions! </p>
+    
+    <a class="cta-btn-expert" {{#if user}} href="/questions/allquestions" {{else}} href="/users/signin" {{/if}}>Earn Bitcoins
+      Answering</a>
+  </div>
+</section>
+<!-- #CALL TO ACTION -->
